--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -113,6 +113,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/lupapass"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
@@ -134,6 +135,7 @@
         android:layout_marginTop="32dp">
 
         <TextView
+            android:id="@+id/btnlogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="LOGIN"
@@ -149,6 +151,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/registerakun"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Belum punya akun?"
